Edited wiki page through web user interface.

--- a/ProjectGoals.wiki
+++ b/ProjectGoals.wiki
@@ -11,6 +11,6 @@ The user should be able to work Minify into an environment without modifying Min
 
 == 3. Be fast as possible ==
 
-Testing has shown that [http://mrclay.org/index.php/2008/06/03/pre-encoding-vs-mod_deflate/ pre-encoding files and the usage of type-maps on Apache can serve files 5x faster] than Minify::serve()! This means that Minify needs to adapt its strategy to maintaining builds of pre-encoded files rather than trying to serve them itself, at least on Apache. It's not clear how to set up lighttpd to behave the same, but it's worth looking into.
+With the release of 2.0.2 Minify will be much faster, outperforming even Apache's mod_deflate (which apparently doesn't cache the encoded content like mod_gzip does).
 
-That said, Minify::serve() can still prove useful for people, and every once of performance should be squeezed out of it. More ab testing! At the moment my main performance concern is the number of separate files. With every serve() call we're at least including Source.php, Controller/Base.php, the controller in use, and !ConditionalGet.php. Non-conditional GETs (which will be most of them on a popular site) will also usually include the cache class(es) and Encoder.php, so that's at least 7 files executed per resource hit. None of the files are really large and opcode caches may make this not an issue at all, but it's worth keeping in mind. The current structure is obviously more maintainable/extensible, but what if integrating all those files into one (for, say, the Groups controller usage) greatly improved performance?
+Since testing has shown that [http://mrclay.org/index.php/2008/06/03/pre-encoding-vs-mod_deflate/ pre-encoding files and using type-maps on Apache is blazingly fast], Minify should work towards maintaining builds of pre-encoded files and letting Apache serve them. It's not clear if there's something similar to type-maps on lighttpd, but it's worth looking into.
